k8s/all.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: rest-api
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: rest-api
    spec:
      containers:
        - image: docker.io/uls555/getting-started-k8s-with-java:v1
          imagePullPolicy: Always
          name: rest-api
---
kind: Service
apiVersion: v1
metadata:
  name: rest-api
spec:
#  minikubeではLoadBalancerは非対応
#  type: LoadBalancer
#  Ingress使用時は設定しない
  type: NodePort
  selector:
    app: rest-api
  ports:
    - port: 8080
      targetPort: 8080
