k8s/ingress3.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: nginx
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: rest-api
          servicePort: 8080
